--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,8 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.google.android.gms:play-services-nearby:15.0.1'
+    implementation 'com.google.android.gms:play-services-nearby:16.0.0'
+    implementation 'com.android.support:appcompat-v7:+'
+    implementation 'com.android.support:multidex:1.0.3'
+
 }
